# pilka

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.lock.REMOVED.git-id  Cargo.toml  KodeLife 2020-08-30 at 22.48.09 0000.png.REMOVED.git-id  LICENSE  README.md  boring_tunnel.png.REMOVED.git-id  rust-toolchain.toml  screenshot.jpg.REMOVED.git-id
.cargo/: config.toml
.github/workflows/: rust.yml
assets/: dither.dds  noise.dds
examples/balls/shader_dump/21-03-2021-22-14-55/shaders/: prelude.glsl  shader.comp  shader.frag
examples/balls/shaders/: shader.comp  shader.frag  shader.vert
examples/bounce/shaders/: shader.frag
examples/cellular_automata/: cellular-automata.gif.REMOVED.git-id
examples/cellular_automata/shaders/: shader.comp  shader.frag
examples/circle_pattern/: circle-pattern.gif.REMOVED.git-id  circle-pattern.png.REMOVED.git-id
examples/circle_pattern/shaders/: prelude.glsl  shader.frag
examples/cube/: cube.gif.REMOVED.git-id
examples/cube/shaders/: prelude.glsl  shader.comp  shader.frag  shader.vert
examples/dithering/: dithering.gif.REMOVED.git-id
examples/dithering/shaders/: prelude.glsl  shader.comp  shader.frag  shader.vert
examples/dots/shaders/: shader.comp  shader.frag
examples/dummy/recordings/: record-20-03-2021-21-52-27.mp4.REMOVED.git-id  record-20-03-2021-21-53-40.mp4.REMOVED.git-id  record-20-03-2021-21-54-22.mp4.REMOVED.git-id
examples/dummy/screenshots/: screenshot-20-03-2021-16-27-17.png.REMOVED.git-id  screenshot-20-03-2021-16-47-48.png.REMOVED.git-id  screenshot-20-03-2021-16-48-12.png.REMOVED.git-id  screenshot-20-03-2021-21-56-55.png.REMOVED.git-id  screenshot-20-03-2021-22-34-14.png.REMOVED.git-id  screenshot-21-03-2021-08-09-28.png.REMOVED.git-id
examples/dummy/shader_dump/20-03-2021-16-47-51/shaders/: shader.comp  shader.frag
examples/dummy/shader_dump/20-03-2021-22-00-43/screenshots/: screenshot-20-03-2021-22-36-24.png.REMOVED.git-id
examples/dummy/shader_dump/20-03-2021-22-00-43/shaders/: shader.comp  shader.frag
examples/dummy/shader_dump/21-03-2021-08-09-16/shaders/: prelude.glsl  shader.frag
examples/dummy/shader_dump/21-03-2021-08-45-58/shaders/: shader.frag
examples/dummy/shaders/: shader.frag
examples/dummy2/shaders/: prelude.glsl  shader.frag
examples/glow/shaders/: shader.frag
examples/laser/: laser.png.REMOVED.git-id
examples/laser/shaders/: prelude.glsl  shader.comp  shader.frag  shader.vert
examples/line_segment/: line-segment.gif.REMOVED.git-id  line-segment.png.REMOVED.git-id
examples/line_segment/shaders/: shader.frag  shader.vert
examples/menger_sponge/: sponge.jpg.REMOVED.git-id
examples/menger_sponge/shaders/: prelude.glsl  shader.comp  shader.frag  shader.vert
examples/mobius_strip/: mobius.jpg.REMOVED.git-id
examples/mobius_strip/shaders/: shader.frag  shader.vert
examples/path_tracer/: path_tracer.png.REMOVED.git-id
examples/path_tracer/shaders/: prelude.glsl  shader.comp  shader.frag  shader.vert
examples/pathtracer/screenshots/: screenshot-20-03-2021-19-08-30.png.REMOVED.git-id
examples/pathtracer/shaders/: shader.frag
examples/sdfs/shader_dump/21-03-2021-13-58-55/shaders/: shader.frag
examples/sdfs/shaders/: shader.frag
examples/slices/: slices.png.REMOVED.git-id
examples/slices/shaders/: prelude.glsl  shader.comp  shader.frag  shader.vert
libs/pilka_ash/: Cargo.toml
libs/pilka_ash/src/: command_pool.rs  device.rs  image.rs  instance.rs  lib.rs  renderpass_and_pipeline.rs  shader_module.rs  surface.rs  swapchain.rs  texture.rs  utils.rs
libs/pilka_dyn/: Cargo.toml
libs/pilka_dyn/src/: lib.rs
libs/pilka_incremental/: Cargo.toml
libs/pilka_incremental/src/: app.rs  app.rs.REMOVED.git-id  lib.rs  renderer.rs  renderer.rs.REMOVED.git-id
libs/pilka_lib/: Cargo.toml
libs/pilka_lib/src/: lib.rs
libs/pilka_winit/: Cargo.toml
libs/pilka_winit/src/: lib.rs
pilka_ash/: Cargo.toml
pilka_ash/src/: command_pool.rs  device.rs  lib.rs  renderer.rs  shader_module.rs  utils.rs
pilka_ash/src/pvk/: command_pool.rs  device.rs  instance.rs  mod.rs  renderpass_and_pipeline.rs  shader_module.rs  surface.rs  swapchain.rs  texture.rs  utils.rs
pilka_ash/src/renderer/: images.rs  render.rs  screenshot.rs
pilka_types/: Cargo.toml
pilka_types/src/: lib.rs
pilka_wgpu/: Cargo.toml
pilka_wgpu/examples/: run.rs  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
pilka_wgpu/shaders/: shader_f.wgsl
pilka_wgpu/src/: blit.wgsl  blitter.rs  lib.rs  naga_compiler.rs  renderer.rs  shader.wgsl  shader_f.wgsl  shader_v.wgsl
pilka_wgpu/src/renderer/: blit.wgsl  blitter.rs  capturer.rs  frag.wgsl  screenshot.rs  shader.wgsl  vert.wgsl
pilka_wgpu/src/reshaper/: mod.rs
shaders/: shader.comp  shader.frag  shader.vert
src/: app.rs  audio.rs  bridge.rs  default_shaders.rs  device.rs  encoder.rs  input.rs  instance.rs  lib.rs  main.rs  pipeline_arena.rs  profiler_window.rs  recorder.rs  render_bundle.rs  render_interface.rs  render_trait.rs  shader_compiler.rs  shader_module.rs  surface.rs  swapchain.rs  texture_arena.rs  utils.rs  watcher.rs
src/default_shaders/: glsl.rs  mod.rs  wgsl.rs
src/renderer/: images.rs  mod.rs  render.rs  screenshot.rs
src/shader_compiler/: glsl.rs  wgsl.rs
