[package]
name = "pilka"
version = "0.5.10"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2021"
license = "GPL-2.0-or-later"
description = "Another live-coding tool for creating shaders demos."
repository = "https://github.com/pudnax/pilka/"
readme = "README.md"
keywords = ["graphics", "glsl", "shaders", "creative", "vulkan"]
exclude = [".gitignore", ".github", "screenshots", "recordings", "shader_dump"]
categories = ["command-line-utilities", "graphics", "rendering"]

[badges]
appveyor = { repository = "https://github.com/pudnax/pilka", branch = "master", service = "github" }
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["pilka_ash", "pilka_wgpu", "pilka_types"]

[dependencies]
winit = "0.25.0"
color-eyre = "0.5.11"
eyre = "0.6.5"
pilka_ash = { version = "0.5.1", path = "pilka_ash" }
pilka_wgpu = { version = "0.1.0", path = "pilka_wgpu" }
pilka_types = { version = "0.1.0", path = "pilka_types" }
notify = "5.0.0-pre.13"
chrono = "0.4.19"
png = "0.17.2"
cpal = "0.13.4"
rustfft = "6.0.1"
crossbeam-channel = "0.5.1"
pollster = "0.2.4"
env_logger = "0.9.0"
shaderc = "0.7.3"

[profile.release]
lto = true
# debug = 0

# [profile.dev.package.'*']
# opt-level = 3

[profile.dev]
debug = 1
