[package]
name = "pilka"
version = "0.6.8"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Another live-coding tool for creating shaders demos."
repository = "https://github.com/pudnax/pilka/"
readme = "README.md"
keywords = ["graphics", "vulkan", "wgpu", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github", "menger_sponge.png", "screenshots", "recordings", "shader_dump"]
categories = ["command-line-utilities", "graphics", "rendering"]

[badges]
appveyor = { repository = "https://github.com/pudnax/pilka", branch = "master", service = "github" }
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["pilka_ash", "pilka_wgpu", "pilka_types"]

[dependencies]
# Ecosystem choice for crossplatform window
winit = "0.26.0"

# Fancy-pants errors
color-eyre = "0.5.11"
eyre = "0.6.5"

pilka_ash = { version = "0.6.8", path = "pilka_ash" }
pilka_wgpu = { version = "0.6.8", path = "pilka_wgpu" }
pilka_types = { version = "0.6.0", path = "pilka_types" }

# Crossplatform filesystem event handler
notify = "5.0.0-pre.13"

# Deps for image manipulations
chrono = "0.4.19"
png = "0.17.2"

# Sounds analysis
cpal = "0.13.4"
rustfft = "6.0.1"

crossbeam-channel = "0.5.1"
env_logger = "0.9.0"

# Shader compiler
shaderc = "0.7.3"

# Blocking executor
pollster = "0.2.4"

# GUI profiler dependencies
puffin = "0.12.1"
puffin_egui = "0.11.0"
egui_wgpu_backend = "0.14.0"
egui_winit_platform = "0.12.0"

[profile.release]
lto = true

[profile.dev.package.'*']
opt-level = 3
