[package]
name = "pilka"
version = "0.8.1"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Another live-coding tool for creating shaders demos."
repository = "https://github.com/pudnax/pilka/"
readme = "README.md"
keywords = ["graphics", "vulkan", "shaders", "creative"]
exclude = [".gitignore", "examples", ".github", "menger_sponge.png", "screenshots", "recordings", "shader_dump"]
categories = ["command-line-utilities", "graphics", "rendering"]

[badges]
appveyor = { repository = "https://github.com/pudnax/pilka", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[dependencies]
# Ecosystem choice for crossplatform windows
raw-window-handle = "0.6.2"
winit = "0.30"
ash = "0.38"
ash-window = "0.13"
bitflags = "2"
bytemuck = "1.16"
ahash = "0.8"
slotmap = "1.0"
either = "1.13"
parking_lot = "0.12"
gpu-alloc = "0.6.0"
gpu-alloc-ash = "0.7.0"

# Fancy-pants errors
anyhow = "1.0"

# Crossplatform filesystem event handler
notify = "^6"
notify-debouncer-mini = "0.4"

# Deps for image manipulations
chrono = "0.4"
png = "0.17"

crossbeam-channel = "0.5.13"
env_logger = "0.11.3"

# Shader compiler
shaderc = "0.8"
ddsfile = "0.5.2"

[profile.deploy]
inherits = "release"
lto = true

[profile.dev.package.'*']
opt-level = 3
