[package]
name = "pilka_ash"
version = "0.5.1"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
description = "Homebrew and probably-not-so-great vulkan renderer"
repository = "https://github.com/pudnax/pilka/"
readme = "README.md"
keywords = ["graphics", "glsl", "shaders", "creative", "vulkan"]
exclude = [".gitignore", ".github", "screenshots", "recordings", "shader_dump"]
categories = ["command-line-utilities", "graphics", "rendering"]

[badges]
appveyor = { repository = "https://github.com/pudnax/pilka", branch = "master", service = "github" }
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.33.2"
ash-molten = "0.9.0"
ash-window = "0.7.0"
ktx = "0.3.2"
raw-window-handle = "0.3.3"
shaderc = "0.7.2"
