[package]
name = "pilka_ash"
version = "0.7.9"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Homebrew and probably-not-so-great vulkan renderer"
repository = "https://github.com/pudnax/pilka/"
readme = "README.md"
keywords = ["graphics", "glsl", "shaders", "creative", "vulkan"]
exclude = [".gitignore", ".github", "screenshots", "recordings", "shader_dump"]
categories = ["command-line-utilities", "graphics", "rendering"]

[badges]
appveyor = { repository = "https://github.com/pudnax/pilka", branch = "master", service = "github" }
maintenance = { status = "experimental" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.0"
ash-molten = "0.13.0"
ash-window = "0.11.0"
raw-window-handle = "0.4.3"
bytemuck = { version = "1.7.3", features = ["derive"] }
ktx = "0.3.2"
pilka_types = { version = "0.7.1", path = "../pilka_types" }
puffin = "0.13.2"
