[package]
name = "pilka_types"
version = "0.6.0"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
description = "Pilka types"
license = "MIT"
keywords = ["graphics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.7.3", features = ["derive"] }
