[package]
name = "pilka_wgpu"
version = "0.7.10"
edition = "2021"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
license = "MIT"
description = "Homebrew and probably-not-so-great wgpu renderer"
repository = "https://github.com/pudnax/pilka/"
readme = "README.md"
keywords = ["graphics", "glsl", "shaders", "creative", "wgpu"]
categories = ["graphics", "rendering"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.14.0", features = ["spirv"] }
raw-window-handle = "0.5.0"
bytemuck = { version = "1.12.1", features = ["derive"] }
color-eyre = "0.6.2"
env_logger = "0.9.1"
pilka_types = { version = "0.7.1", path = "../pilka_types" }
puffin = "0.13.3"
pollster = "0.2.5"
smaa = "0.8.0"
# smaa = { git = "https://github.com/pudnax/smaa-rs", branch = "webgpu12" }
# naga = { git = "https://github.com/gfx-rs/naga", branch = "master", features = ["glsl-in",
#     "wgsl-in", "spv-in", "span", "spv-out", "wgsl-out", "glsl-validate"] }

[dev-dependencies]
winit = "0.27.4"
notify = "5.0.0"
