[package]
name = "pilka_dyn"
version = "0.2.3"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"
license = "GPL-2.0-or-later"
description = "Glue crate which combine everything with dynamic linking"
repository = "https://github.com/pudnax/pilka/"
readme = "README.md"
keywords = ["graphics", "glsl", "shaders", "creative", "vulkan"]
exclude = [".gitignore", ".github", "screenshots", "recordings", "shader_dump"]
categories = ["command-line-utilities", "graphics", "rendering"]

[badges]
appveyor = { repository = "https://github.com/pudnax/pilka", branch = "master", service = "github" }
maintenance = { status = "experimental" }

[lib]
crate-type = ["dylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pilka_incremental = { version = "0.2.3", path = "./../pilka_incremental" }
