[package]
name = "pilka_incremental"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pilka_winit = { path = "./../pilka_winit" }
pilka_ash = { path = "./../pilka_ash" }
